		to copy the CD contents first to a harddisk.
		Better error reporting if something is wrong.
		The import command now also figures out the difference between
		8.3 and long filenames and does the right thing during import.
		During file import the destination is tested for both 8.3 and
		LFN for an existing file. Improved error reporting.

	mbfido:
		In rfc2ftn a debug logmessage added to check for unrecognised
		message ids.

	mbnntp:
		Removed dead timercode.
		Code cleanup.
		When a message is posted without RFC Messageid, a fidonet MSGID
		is fresh created.
		Changed X-JAM kludges to X-FTN kludges to make it compatible
		with the rest of the gates.

	mbsetup:
		Added support for XxxxBSD console port.
		For new systems, there will now be 16 terminal ports created
		instead of 10, this is the maximum number of safe created ttys.
		The ttys are now sorted on the comment fields.

	examples:
		Removed bbs list items from the English menus and txtfiles and
		the Spanish menus and txtfiles.
		Fixed the menu archives so that they contain menu files again.

	lang:
		TODO: remove bbslist entries.


v0.71.0		27-Oct-2004 - 28-Nov-2004

	upgrade:
		Start mbsetup and leave.
		You might want to check menu 8.5, file transfer protocols.

	general:
		From filetranfer records removed the batch and bidirectional
		switches, these are no longer needed.
		Added new subdirectory mbutils. Some sources from the mbsebbs
		subdirectory are moved there.
		Changed the CFLAGS back from -O3 to -O2 since there seem some
		stablity problems and I want to rule out the possibility that
		this is caused by bad gcc optimisation.

	mbsebbs:
		In change handle the first character of the name is not 
		capitalized.
		Changed layout of raw directory listing to support longer
		filenames.
		Rewrote terminal i/o.
		If a user pages the sysop a hint is displayed to fill in the
		reason to chat, language prompt 28.
		After forced chat, redisplay the last menu.